fix: tried to fix styling of links in collapsed navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ p{
 
 html{
     font-size: 16px;
+    -webkit-tap-highlight-color: #f5f5f5;
 }
 
 body{
@@ -50,11 +51,28 @@ a,a:hover{
     -webkit-transition-property: -webkit-transform;
     transition-property: -webkit-transform;
     -o-transition-property: transform;
-    transition-property: transform;
     transition-property: transform, -webkit-transform;
     -webkit-transition-timing-function: ease-in-out;
          -o-transition-timing-function: ease-in-out;
             transition-timing-function: ease-in-out;
+}
+
+/* CREDIT: Hover.css */
+.hvr-glow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition-duration: 0.3s;
+  -o-transition-duration: 0.3s;
+     transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  -webkit-transition-property: -webkit-box-shadow;
+  transition-property: -webkit-box-shadow;
+  -o-transition-property: box-shadow;
+  transition-property: box-shadow, -webkit-box-shadow;
 }
 
 .hvr-grow:hover,
@@ -64,6 +82,7 @@ a,a:hover{
         -ms-transform: scale(1.2);
             transform: scale(1.2);
 }
+
 
 /* --- Header --- */
 
@@ -93,6 +112,8 @@ header .collapsed-navbar-wrapper{
     padding: 0;
 }
 
+
+
 header .hamburger-icon-wrapper{
     text-align: center;
     height: 40px;
@@ -100,29 +121,12 @@ header .hamburger-icon-wrapper{
     -webkit-box-sizing: content-box;
             box-sizing: content-box;
     padding: 5px;
-    margin: 5px;   
+    margin: 5px;
+    border: none;   
+    background-color: #f5f5f5;
 }
 
-/* CREDIT: Hover.css */
-.hvr-glow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-     transition-duration: 0.3s;
-  -webkit-transition-property: box-shadow;
-  -webkit-transition-property: -webkit-box-shadow;
-  transition-property: -webkit-box-shadow;
-  -o-transition-property: box-shadow;
-  transition-property: box-shadow;
-  transition-property: box-shadow, -webkit-box-shadow;
-}
-
-/* provides User feedback when dropdown navmenu is opened */
+/* provides user feedback when dropdown navmenu is opened */
 header .hamburger-icon-wrapper:not(.collapsed){
     -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
@@ -173,7 +177,7 @@ header .hamburger-icon{
     padding: 0.1rem;
     border-width: 2px;
     border-style: solid;
-    border-radius: 6px;
+    border-radius: 4px;
     font-family: 'Lato', sans-serif;
     text-align: center;
     font-size: 1em;
@@ -200,24 +204,22 @@ header .hamburger-icon{
     outline: none;
 }
 
+
 .active{
     font-weight: 700;
 }
 
 
 #navbar-toggled{
-    /* height: calc(100vh - 160px); */
     padding: 20px 14vw; 
     position: absolute;
     top: 80px;
     right: 0;
     z-index: 1000;   
-    
     background-color: #f5f5f5;
 }
 
 .toggled-nav-links-wrapper{
-    /* height: 100%; */
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
